--- a/icosoc/examples/hello/icosoc.cfg
+++ b/icosoc/examples/hello/icosoc.cfg
@@ -1,8 +1,8 @@
 # hello world example
-board icoboard
+board blackice2
 
 # enable compressed ISA support
-compressed_isa
+#compressed_isa
 
 # Digilent PmodUSBUART on PMOD3
 # http://store.digilentinc.com/pmodusbuart-usb-to-uart-interface/
@@ -17,10 +17,10 @@ mod gpio ledstrip
   address 2
   connect IO pmod2 pmod1
 
-# PWM on pin C16
+# PWM on pin 8
 mod pwm pwm0
   address 3
-  connect pin C16
+  connect pin P8
 
 # Configuration for on-chip debugger
 
