Fixed hello example

--- a/icosoc/examples/hello/icosoc.cfg
+++ b/icosoc/examples/hello/icosoc.cfg
@@ -60,8 +60,8 @@ debug_net mem_addr[2]
 debug_net mem_addr[1]
 debug_net mem_addr[0]
 
-debug_port pmod4_1 clk
-debug_port pmod4_2 resetn
-debug_port pmod4_3 cpu_trap
-debug_port pmod4_4 mem_valid
+#debug_port pmod4_1 clk
+#debug_port pmod4_2 resetn
+#debug_port pmod4_3 cpu_trap
+#debug_port pmod4_4 mem_valid
 
