Change to use nextpnr

--- a/icosoc/.gitignore
+++ b/icosoc/.gitignore
@@ -12,6 +12,7 @@
 /examples/*/icosoc.bin
 /examples/*/icosoc.log
 /examples/*/icosoc.blif
+/examples/*/icosoc.json
 /examples/*/icosoc.c
 /examples/*/icosoc.h
 /examples/*/icosoc.mk
